appId: ${APP_ID}
---
- launchApp
- runFlow: ../scripts/dismiss-system-dialog.yaml
- tapOn: Profile
- tapOn:
    id: open-settings
- tapOn:
    id: theme-light
- back
- runFlow:
    file: ../scripts/capture-screens.yaml
    env:
      VARIANT: light
- tapOn: Profile
- tapOn:
    id: open-settings
- tapOn:
    id: theme-dark
- back
- runFlow:
    file: ../scripts/capture-screens.yaml
    env:
      VARIANT: dark
